--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
          <!-- Header section -->
 
         <header class="header-section d-flex flex-column align-items-center text-white position-relative" >
-            <div class="header-img-container overflow-hidden ">      
-            <img class= "img-fluid img-zoom " src="./images/header.png" alt="Header image">
+            <div class="header-img-container overflow-hidden  w-100">      
+            <img class= "header-image img-fluid img-zoom" src="./images/header.webp" alt="Header image">
             </div>
             <h1 class="header-title position-absolute mt-5">Xavier Ros on New Work</h1>
 
