--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- mobile view navigation end -->
 
-        <div class="body-block container-fluid">  
+        <div class="body-block-navbar container-fluid">  
              <div class="main-navbar-container  container-fluid d-flex justify-content-between">
 
         <div class="navigation-contents nav container-fluid align-items-center">
