change_image_formats

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
          <!-- Header section -->
 
         <header class="header-section d-flex flex-column align-items-center text-white position-relative" >
-            <div class="header-img-container overflow-hidden  w-100">      
-            <img class= "header-image img-fluid img-zoom" src="./images/header.webp" alt="Header image">
+            <div class="header-img-container overflow-hidden container-fluid mx-0 px-0 ">      
+            <img class= "header-image img-fluid img-zoom container-fluid mx-0 px-0 "  src="./images/header.webp" alt="Header image">
             </div>
             <h1 class="header-title position-absolute mt-5">Xavier Ros on New Work</h1>
 
@@ -111,7 +111,7 @@
     <div class="current-topic-block row ">
     <div class="curr-topic-col col-sm-12 col-md-4 container-fluid">
         <div class="image-container overflow-hidden w-100">
-        <img  class="c-t-thumbnail img-fluid w-100 img-zoom"  src="./images/curr-topics-1.jpg" alt="current topic 1 image">
+        <img  class="c-t-thumbnail img-fluid w-100 img-zoom"  src="./images/curr-topics-1.webp" alt="current topic 1 image">
        </div>
         <p class="c-t-item-date">Annual Report ---- 12/16/2022</p>
         <h3 class="section-sub-title">The diversity of the Four Rings</h3>
@@ -120,7 +120,7 @@
 
     <div class="curr-topic-col col-sm-12 col-md-4 container-fluid">
         <div class="image-container overflow-hidden w-100">
-        <img class="c-t-thumbnail img-fluid w-100 img-zoom"  src="./images/curr-topics-2.png" alt="current topic 2 image">
+        <img class="c-t-thumbnail img-fluid w-100 img-zoom"  src="./images/curr-topics-2.webp" alt="current topic 2 image">
         </div>
         <p class="c-t-item-date">Sustainability ---- 12/15/2022</p>
         <h3 class="section-sub-title">We, not I: How Audi lives CSR</h3>
@@ -129,7 +129,7 @@
 
     <div class="curr-topic-col col-sm-12 col-md-4 container-fluid">
         <div class="image-container overflow-hidden w-100">
-        <img class="c-t-thumbnail img-fluid w-100 img-zoom" src="./images/curr-topics-3.png" alt="current topic 3 image">
+        <img class="c-t-thumbnail img-fluid w-100 img-zoom" src="./images/curr-topics-3.webp" alt="current topic 3 image">
         </div><p class="c-t-item-date">Working World ---- 11/23/2022</p>
         <h3 class="section-sub-title">Audi charging hub: flexible, sustainable, convenient</h3>
         <p class="section-contents">In addition to Nuremberg and Zurich, Audi charging hub fast-charging stations are planned in central locations in Salzburg, Berlin and Munich. They offer sustainable power storage and top service features.</p>
@@ -150,7 +150,7 @@
     <p class="xsfontsize"> ¹The vehicle shown is a concept vehicle that is not available as a production vehicle.</p>
 </div>
 <div class="electric-right-section col-md-6 col-sm-12 order-1 order-md-2 container-fluid">
-<img class=".c-t-thumbnail img-fluid w-100" src="./images/electric.png" alt="Electric section image">
+<img class=".c-t-thumbnail img-fluid w-100" src="./images/electric.webp" alt="Electric section image">
 </div>
 </section>
 
@@ -159,7 +159,7 @@
 
 <section class="career container-fluid row section-margin">
     <div class="career-left-section col-md-6 col-sm-12 container-fluid">
-        <img class="img-fluid w-100" src="./images/career.png" alt="Career section image">
+        <img class="img-fluid w-100" src="./images/career.webp" alt="Career section image">
     </div>
     <div class="career-right-section col-md-6 col-sm-12 container-fluid py-3 d-flex flex-column justify-content-center" >
         <h3 class="section-sub-title">Audi Career: We are progress. With you.</h3>
@@ -180,7 +180,7 @@
 
     <div class="press-releases-col col-sm-12 col-md-4 container-fluid " >
         <div class="image-container overflow-hidden w-100">
-            <img  class="c-t-thumbnail img-fluid w-100 img-zoom "  src="./images/press-release-1.png" alt="press-release-1 image">
+            <img  class="c-t-thumbnail img-fluid w-100 img-zoom "  src="./images/press-release-1.webp" alt="press-release-1 image">
         </div>
         <p class="c-t-item-date"> Audi MediaCenter --- 02/01/2023 </p>
         <h3 class="section-sub-title">Audi deepens software expertise with around 400 new IT positions</h3>
@@ -189,7 +189,7 @@
 
     <div class="curr-topic-col col-sm-12 col-md-4 container-fluid">
         <div class="image-container overflow-hidden w-100">
-        <img class="c-t-thumbnail img-fluid w-100 img-zoom"  src="./images/press-release-2.png" alt="press-release-2 image">
+        <img class="c-t-thumbnail img-fluid w-100 img-zoom"  src="./images/press-release-2.webp" alt="press-release-2 image">
        </div>
         <p class="c-t-item-date">Audi MediaCenter ---- 01/26/2023</p>
         <h3 class="section-sub-title">The Audi activesphere concept</h3>
@@ -198,7 +198,7 @@
 
     <div class="curr-topic-col col-sm-12 col-md-4 container-fluid">
         <div class="image-container overflow-hidden w-100">
-        <img class="c-t-thumbnail img-fluid w-100 img-zoom" src="./images/press-release-3.png" alt="press-release-3 image">
+        <img class="c-t-thumbnail img-fluid w-100 img-zoom" src="./images/press-release-3.webp" alt="press-release-3 image">
        </div>
         <p class="c-t-item-date">Audi MediaCenter ---- 01/24/2023</p>
         <h3 class="section-sub-title ">Sustainable Water Management: Audi Joins the Alliance for Water Stewardship</h3>
@@ -216,7 +216,7 @@
   
     <section class="media-center container-fluid row my-4">
         <div class="media-center-left-section col-md-6 col-sm-12 container-fluid my-3">
-        <img  class="img-fluid w-100" src="./images/media-center.png" alt="media-center image">
+        <img  class="img-fluid w-100" src="./images/media-center.webp" alt="media-center image">
         </div>
         <div class="media-center-right-section col-md-6 col-sm-12 container-fluid my-3 d-flex flex-column justify-content-center">
             <h3 class="section-sub-title">At Audi you’ll find the right vehicle for every requirement</h3>
