--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
     <p class="xsfontsize"> ¹The vehicle shown is a concept vehicle that is not available as a production vehicle.</p>
 </div>
-<div class="electric-right-section col-md-6 col-sm-12 order-1 order-md-2 container-fluid">
+<div class="electric-right-section col-md-6 col-sm-12 order-1 order-md-2 container-fluid mx-0 px-0">
 <img class=".c-t-thumbnail img-fluid w-100" src="./images/electric.webp" alt="Electric section image">
 </div>
 </section>
@@ -157,8 +157,8 @@
 
 <!-- career section -->
 
-<section class="career container-fluid row section-margin">
-    <div class="career-left-section col-md-6 col-sm-12 container-fluid">
+<section class="career container-fluid row section-margin mx-0 px-0">
+    <div class="career-left-section col-md-6 col-sm-12 container-fluid ">
         <img class="img-fluid w-100" src="./images/career.webp" alt="Career section image">
     </div>
     <div class="career-right-section col-md-6 col-sm-12 container-fluid py-3 d-flex flex-column justify-content-center" >
@@ -174,12 +174,12 @@
 
 <!-- Press release section -->
 
-    <section class="press-releases section-margin">
+    <section class="press-releases section-margin mx-0 px-0">
     <h2 class="section-title text-center my-4">Press releases</h2>
-<div class="press-releases-block container-fluid my-4 row m-auto" >
+<div class="press-releases-block container-fluid my-4 row mx-0 px-0" >
 
     <div class="press-releases-col col-sm-12 col-md-4 container-fluid " >
-        <div class="image-container overflow-hidden w-100">
+        <div class="image-container overflow-hidden w-100 mx-0 px-0">
             <img  class="c-t-thumbnail img-fluid w-100 img-zoom "  src="./images/press-release-1.webp" alt="press-release-1 image">
         </div>
         <p class="c-t-item-date"> Audi MediaCenter --- 02/01/2023 </p>
@@ -187,7 +187,7 @@
         <p class="section-contents">To the press release</p>
     </div>
 
-    <div class="curr-topic-col col-sm-12 col-md-4 container-fluid">
+    <div class="curr-topic-col col-sm-12 col-md-4 container-fluid ">
         <div class="image-container overflow-hidden w-100">
         <img class="c-t-thumbnail img-fluid w-100 img-zoom"  src="./images/press-release-2.webp" alt="press-release-2 image">
        </div>
@@ -196,7 +196,7 @@
         <p class="section-contents">To the press release</p>
     </div>
 
-    <div class="curr-topic-col col-sm-12 col-md-4 container-fluid">
+    <div class="curr-topic-col col-sm-12 col-md-4 container-fluid ">
         <div class="image-container overflow-hidden w-100">
         <img class="c-t-thumbnail img-fluid w-100 img-zoom" src="./images/press-release-3.webp" alt="press-release-3 image">
        </div>
@@ -214,7 +214,7 @@
     </section>
   
   
-    <section class="media-center container-fluid row my-4">
+    <section class="media-center container-fluid row my-4 mx-0 px-0">
         <div class="media-center-left-section col-md-6 col-sm-12 container-fluid my-3">
         <img  class="img-fluid w-100" src="./images/media-center.webp" alt="media-center image">
         </div>
